# leptos_oidc2

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/backends/: keycloak.md  rauthy.md
examples/backend-keycloak/: Dockerfile  Readme.md  docker-compose.yml  keycloak_functions.sh  provision.sh
examples/elaborate/: Cargo.toml  Readme.md  config.json  error.json  index.html
examples/elaborate/resources/: admin-id-token.json  admin-token.json  leptos-token.json  testuser-id-token.json
examples/elaborate/src/: elaborate.rs  main.rs  user.rs
examples/elaborate/src/components/: mod.rs
examples/simple/: Cargo.toml  Trunk.toml  index.html
examples/simple/src/: components.rs  main.rs  simple.rs
src/: authenticated.rs  components.rs  error.rs  lib.rs  response.rs  storage.rs  unauthenticated.rs  utils.rs
