[package]
name = "leptos_oidc"
version = "0.8.0"
edition = "2021"
description = "A Leptos utility library for simplified OpenID Connect (OIDC) authentication integration."
keywords = ["leptos", "auth", "oidc", "openidconnect", "oauth"]
categories = ["web-programming", "api-bindings", "network-programming"]
authors = [
    "Daniél Kerkmann <daniel@kerkmann.dev>",
    "Niklas Scheerhoorn <sinner1991@gmail.com>",
    "Reimar Stier <reimar.stier@mercedes-benz.com>",
]
license = "MIT"
repository = "https://gitlab.com/kerkmann/leptos_oidc"
documentation = "https://docs.rs/leptos_oidc"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[lib]
name = "leptos_oidc"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "wasmbind"] }
codee = { version = "0.2", features = ["json_serde"] }
jsonwebtoken = { version = "9.3", default-features = false }
leptos = { version = "0.7", default-features = false }
leptos-use = { version = "0.15", default-features = false, features = ["storage", "use_timeout_fn"] }
leptos_router = { version = "0.7", default-features = false }
oauth2 = { version = "4.4.2", default-features = false, features = ["pkce-plain"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
thiserror = { version = "1.0", default-features = false }
tracing = { version = "0.1", default-features = false }
