[package]
name = "leptos_oidc2"
version = "0.9.1"
edition = "2021"
description = "A Leptos utility library for simplified OpenID Connect (OIDC) authentication integration."
keywords = ["leptos", "auth", "oidc", "openidconnect", "oauth"]
categories = ["web-programming", "api-bindings", "network-programming"]
authors = [
    "nopeNoshishi <nopenoshishi@gmail.com>",
    "Daniél Kerkmann <daniel@kerkmann.dev>",
    "Niklas Scheerhoorn <sinner1991@gmail.com>",
    "Reimar Stier <reimar.stier@mercedes-benz.com>",
]
license = "MIT"
repository = "https://github.com/nopeNoshishi/leptos_oidc2"
documentation = "https://docs.rs/leptos_oidc2"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[lib]
name = "leptos_oidc2"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "wasmbind"] }
codee = { version = "0.3", features = ["json_serde"] }
jsonwebtoken = { version = "9.3", default-features = false }
leptos = { version = "0.8", default-features = false }
leptos-use = { version = "0.16", default-features = false, features = ["storage", "use_timeout_fn"] }
leptos_router = { version = "0.8", default-features = false }
oauth2 = { version = "5.0", default-features = false, features = ["pkce-plain"] }
reqwest = { version = "0.13", default-features = false, features = ["json"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
thiserror = { version = "2.0", default-features = false }
tracing = { version = "0.1", default-features = false }
