[package]
name = "elaborate"
edition = "2021"
version = "0.1.0"

[workspace]

[dependencies]
leptos_oidc = { path = "../.." }
leptos_meta = "0.7"
leptos = { version = "0.7", features = ["csr"] }
console_error_panic_hook = "0.1.7"
leptos_router = "0.7"
tracing-web = "0.1.3"
tracing-subscriber = { version = "0.3.19", features = ["ansi"]}
gloo-net = { version = "0.6.0", features = ["json"]}
thiserror = "1.0.69"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
