[package]
name = "elaborate"
edition = "2021"
version = "0.1.0"

[workspace]

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = { version = "0.6.0", features = ["json"]}
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = "0.7"
leptos_oidc = { path = "../.." }
leptos_router = "0.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "1.0.69"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["ansi"]}
tracing-web = "0.1.3"
