[package]
name = "simple"
edition = "2021"
version = "0.1.0"

[workspace]

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = "0.7"
leptos_oidc = { path = "../../" }
leptos_router = "0.7"
tracing-web = "0.1.3"
tracing-subscriber = { version = "0.3.19", features = ["ansi"]}
