[package]
name = "simple"
edition = "2021"
version = "0.1.0"

[workspace]

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "=0.7.3", features = ["csr"] }
leptos_meta = "0.7.3"
leptos_oidc = { path = "../../" }
leptos_router = "0.7.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["ansi"]}
tracing-web = "0.1.3"
