[package]
name = "simple"
edition = "2021"
version = "0.1.0"

[workspace]

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.2", features = ["csr"] }
leptos_meta = "0.8.2"
leptos_oidc2 = { path = "../.." }
leptos_router = "0.8.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["ansi"]}
tracing-web = "0.1.3"
